// auth.proto
syntax = "proto3";

import "google/protobuf/any.proto";

package auth;

message LoginRequest {
  string strategy = 1;
  string mobile = 2;
  string email = 3;
  string password = 4;
}

message UserProfile {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string defaultAiModel = 4;
}

message SignupRequest {
  string strategy = 1;
  string email = 2;
  string mobile = 3;
  string password = 4;
  string referralCode = 5;
  UserProfile profile = 6;
  string token = 7;
}

message AuthResponse {
  string token = 1;
}

message SendVerificationRequest {
  string strategy = 1;
  string verifier = 2;
}

message SendVerificationResponse {
  string message = 1;
}

message VerifyValidationCodeRequest {
  string verifier = 1;
  string code = 2;
  string strategy = 3;
}

message VerifyValidationResponse {
  string message = 1;
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  google.protobuf.Any decoded = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc Signup(SignupRequest) returns (AuthResponse);
  rpc SendVerification(SendVerificationRequest) returns (SendVerificationResponse);
  rpc VerifyValidationCode(VerifyValidationCodeRequest) returns (VerifyValidationResponse);
  rpc Verify(VerifyTokenRequest) returns (VerifyTokenResponse);
}